finished second chapter all the way through custom transformers

--- a/cali_housing_model.ipynb
+++ b/cali_housing_model.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +727,7 @@
        "Name: income_cat, dtype: float64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
        "<AxesSubplot:xlabel='longitude', ylabel='latitude'>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +813,7 @@
        "<AxesSubplot:xlabel='longitude', ylabel='latitude'>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
        "Name: median_house_value, dtype: float64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +911,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +957,7 @@
        "<AxesSubplot:xlabel='median_income', ylabel='median_house_value'>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1015,7 @@
        "Name: median_house_value, dtype: float64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1038,7 +1038,401 @@
     "Apparently houses with a lower bedroom/room ratio tend to be more expensive. This is an iterative process: once you get a prototype up and running, you can analyze its output to gain more insights and come back to this exploration step.\n",
     "\n",
     "## Prepare the Data for Machine Learning\n",
-    "Algorithms"
+    "\n",
+    "Let's start by reverting to a clean training set. Also, let's seperate predictors and the labels."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing = strata_train_set.drop(\"median_house_value\", axis=1)\n",
+    "housing_labels = strata_train_set[\"median_house_value\"].copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Cleaning\n",
+    "To deal with missing values in **total_bedrooms** we have three options:\n",
+    "1. Get rid of the corresponding districts.\n",
+    "2. Get rid of the whole attribute.\n",
+    "3. Set the values to some value (zero, the mean, the median, etc.)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# option 1\n",
+    "housing.dropna(subset=[\"total_bedrooms\"])\n",
+    "\n",
+    "# option 2\n",
+    "housing.drop(\"total_bedrooms\", axis=1)\n",
+    "\n",
+    "# option 3\n",
+    "median = housing[\"total_bedrooms\"].median()\n",
+    "housing[\"total_bedrooms\"].fillna(median, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's how to do the same with Scikit-Learn. First, you need to create a `SimpleImputer` instance, specifying that you want to replace each attribute’s missing values with the median of that attribute:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SimpleImputer(strategy='median')"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "imputer = SimpleImputer(strategy='median')\n",
+    "\n",
+    "# Since the median can only be computed on numerical attributes, we\n",
+    "# create a copy of the data without the text attribute ocean_proximity\n",
+    "housing_num = housing.drop('ocean_proximity', axis=1)\n",
+    "\n",
+    "# Now we fit the imputer instance to the training data\n",
+    "imputer.fit(housing_num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The imputer has simply computed the median of each attribute and stored the result in its `statistics_` instance variable. it is safer to apply\n",
+    "the `imputer` to all the numerical attributes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Imputer: [-118.51     34.26     29.     2119.5     433.     1164.      408.\n",
+      "    3.5409]\n",
+      "Medians: [-118.51     34.26     29.     2119.5     433.     1164.      408.\n",
+      "    3.5409]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Imputer:', imputer.statistics_)\n",
+    "print('Medians:', housing_num.median().values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Transform the traning set by replacing missing values medians\n",
+    "X = imputer.transform(housing_num)\n",
+    "\n",
+    "# The result will be a plain NumPy array containing the transformed features.\n",
+    "housing_tr = pd.DataFrame(\n",
+    "        X, columns=housing_num.columns, index=housing_num.index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SCIKIT-LEARN DESIGN\n",
+    "Scikit-Learn’s API is remarkably well designed.\n",
+    "\n",
+    "_Estimators_\n",
+    "- Any object that can estimate some parameters based on a dataset is called an _estimator_ (e.g., an `imputer` is an estimator). The estimation itself is performed by the `fit()` method, and it takes only a dataset as a parameter (or two for supervised learning algorithms; the second dataset contains the labels). Any other parameter needed to guide the estimation process is considered a hyperparameter (such as an imputer ’s `strategy` ), and it must be set as an instance variable (generally via a constructor parameter).\n",
+    "\n",
+    "_Transformers_\n",
+    "- Some estimators (such as an imputer ) can also transform a dataset; these are called _transformers_. The transformation is performed by the `transform()` method with the dataset to transform as a parameter. It returns the transformed dataset. This transformation generally relies on the learned parameters, as is the case for an `imputer`. All transformers also have a convenience method called `fit_transform()` that is equivalent to calling `fit()` and then `transform()` (but sometimes `fit_transform()` is optimized and runs much faster).\n",
+    "\n",
+    "_Predictors_ \n",
+    "- Finally, some estimators, given a dataset, are capable of making predictions; they are called _predictors_. For example, the `LinearRegression` model in the previous chapter was a predictor: given a country’s GDP per capita, it predicted life satisfaction. A predictor has a `predict()` method that takes a dataset of new instances and returns a dataset of corresponding predictions. It also has a `score()` method that measures the quality of the predictions, given a test set (and the corresponding labels, in the case of supervised learning algorithms).\n",
+    "\n",
+    "_Inspection_\n",
+    "- All the estimator’s hyperparameters are accessible directly via public instance variables (e.g., `imputer.strategy`), and all the estimator’s learned parameters are accessible via public instance variables with an underscore suffix (e.g., `imputer.statistics_`).\n",
+    "\n",
+    "## Handling Text and Categorical Attributes\n",
+    "Let's look at the **ocean_proximity** attribute:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ocean_proximity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>17606</th>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18632</th>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14650</th>\n",
+       "      <td>NEAR OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3230</th>\n",
+       "      <td>INLAND</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3555</th>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19480</th>\n",
+       "      <td>INLAND</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8879</th>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13685</th>\n",
+       "      <td>INLAND</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4937</th>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4861</th>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ocean_proximity\n",
+       "17606       <1H OCEAN\n",
+       "18632       <1H OCEAN\n",
+       "14650      NEAR OCEAN\n",
+       "3230           INLAND\n",
+       "3555        <1H OCEAN\n",
+       "19480          INLAND\n",
+       "8879        <1H OCEAN\n",
+       "13685          INLAND\n",
+       "4937        <1H OCEAN\n",
+       "4861        <1H OCEAN"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_cat = housing[['ocean_proximity']]\n",
+    "housing_cat.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let’s convert these categories from text to numbers. For this, we can use Scikit-Learn’s `OrdinalEncoder` class:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.],\n",
+       "       [0.],\n",
+       "       [4.],\n",
+       "       [1.],\n",
+       "       [0.],\n",
+       "       [1.],\n",
+       "       [0.],\n",
+       "       [1.],\n",
+       "       [0.],\n",
+       "       [0.]])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import OrdinalEncoder\n",
+    "\n",
+    "ordinal_encoder = OrdinalEncoder()\n",
+    "housing_cat_encoded = ordinal_encoder.fit_transform(housing_cat)\n",
+    "housing_cat_encoded[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array(['<1H OCEAN', 'INLAND', 'ISLAND', 'NEAR BAY', 'NEAR OCEAN'],\n",
+       "       dtype=object)]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We can get the list of categories\n",
+    "ordinal_encoder.categories_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One issue with this representation is that ML algorithms will assume that two nearby values are more similar than two distant values. This may be fine in some cases (e.g., for ordered categories such as “bad,” “average,” “good,” and“excellent”), but it is obviously not the case for the **ocean_proximity** column.\n",
+    "\n",
+    "To fix this issue, a common solution is to create one binary attribute per category: one attribute equal to 1 when the category is “<1H OCEAN” (and 0 otherwise), another attribute equal to 1 when the category is u“INLAND” (and 0 otherwise), and so on. This is called _one-hot encoding_, because only one attribute will be equal to 1 (hot), while the others will be 0 (cold)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<16512x5 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 16512 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
+    "cat_encoder = OneHotEncoder()\n",
+    "housing_cat_1hot = cat_encoder.fit_transform(housing_cat)\n",
+    "housing_cat_1hot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After one-hot encoding, we get a matrix with thousands of columns, and the matrix is full of 0s except for a single 1 per row. Using up tons of memory mostly to store zeros would be very wasteful, so instead a SciPy sparse matrix only stores the location of the nonzero elements. You can use it mostly like a normal 2D array, 21 but if you really want to convert it to a (dense) NumPy array, just call the `toarray()` method:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0., 0.],\n",
+       "       [1., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 1.],\n",
+       "       ...,\n",
+       "       [0., 1., 0., 0., 0.],\n",
+       "       [1., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0.]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_cat_1hot.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array(['<1H OCEAN', 'INLAND', 'ISLAND', 'NEAR BAY', 'NEAR OCEAN'],\n",
+       "       dtype=object)]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat_encoder.categories_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Custom Transformers\n"
    ]
   },
   {
