covered through pipeline builder

--- a/Ch2_housing.ipynb
+++ b/Ch2_housing.ipynb
@@ -15,8 +15,7 @@
     "will call them “districts” for short.\n",
     "\n",
     "### What model to choose:\n",
-    "- it is clearly a typical supervised learning task, since you are given labeled training examples (each instance\n",
-    "comes with the expected output, i.e., the district’s median housing price).\n",
+    "- it is clearly a typical supervised learning task, since you are given labeled training examples (each instance comes with the expected output, i.e., the district’s median housing price).\n",
     "- It is also a typical regression task, since you are asked to predict a value. More specifically, this is a *multiple regression* problem, since the system will use multiple features to make a prediction (it will use the district’s population, the median income, etc.). \n",
     "- It is also a *univariate* regression problem, since we are only trying to predict a single value for each district. If we were trying to predict multiple values per district, it would be a *multivariate* regression problem.\n",
     "- Finally, there is no continuous flow of data coming into the system, there is no particular need to adjust to changing data rapidly, and the data is small enough to fit in memory, so plain *batch learning* should do just fine.\n",
@@ -27,9 +26,9 @@
     "RMSE$(X,h)=\\sqrt{\\frac{1}{m} \\sum \\limits_{i=1}^m(h(x^i)-y^i)^2}$\n",
     "\n",
     "- $m$ is the number of instances in the dataset you are measuring the RMSE on.\n",
-    "    - For example, if you are evaluating the RMSE on a validation set of 2,000 districts, then $m$ = 2,000.\n",
+    "    - For example, if you are evaluating the RMSE on a validation set of 2,000 districts, then $m = 2,000$.\n",
     "- $x^i$ is a vector of all the feature values (excluding the label) of the $i$th instance in the dataset, and $y^i$ is its label (the desired output value for that instance)\n",
-    "- $X$ is a matrix containing all the feature values (excluding labels) of all instances in the dataset. There is one row per instance, and the $i$th row is equal to the transpose of $x^i$, noted $(x^)^⊺$.\n",
+    "- $X$ is a matrix containing all the feature values (excluding labels) of all instances in the dataset. There is one row per instance, and the $i$th row is equal to the transpose of $x^i$, noted $(x)^⊺$.\n",
     "- $h$ is your system’s prediction function, also called a _hypothesis_. When your system is given an instance’s feature vector $x^i$ , it outputs a predicted value $ŷ^i= h(x^i)$ for that instance ($ŷ$ is pronounced “y-hat”).\n",
     "    - For example, if your system predicts that the median housing price in the first district is \\\\$158,400, then $ŷ^1 = h(x^1) = 158,400$. The prediction error for this district is $ŷ^1 – y^1 = 2,000$.\n",
     "- RMSE$(X,h)$ is the cost function measured on the set of examples using your hypothesis $h$.\n",
@@ -52,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1095,7 @@
        "SimpleImputer(strategy='median')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1182,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1267,7 @@
        "4861        <1H OCEAN"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1287,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1304,7 @@
        "       [0.]])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1320,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1329,7 @@
        "       dtype=object)]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1351,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1361,7 +1360,7 @@
        "\twith 16512 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1383,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1398,7 +1397,7 @@
        "       [0., 0., 0., 1., 0.]])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1409,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1418,7 @@
        "       dtype=object)]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1432,15 +1431,105 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Custom Transformers\n"
+    "## Custom Transformers\n",
+    "\n",
+    "You will want your transformer to work seamlessly with Scikit-Learn functionalities (such as pipelines), and since Scikit-Learn relies on duck typing (not inheritance), all you need to do is create a class and implement three methods: `fit()` (returning `self`), `transform()` , and `fit_transform()`.\n",
+    "\n",
+    "You can get the last one for free by simply adding `TransformerMixin` as a base class. If you add `BaseEstimator` as a base class (and avoid \\*args and \\*\\*kargs in your constructor), you will also get two extra methods(`get_params()` and `set_params()`) that will be useful for automatic hyperparameter tuning."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Example class\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "\n",
+    "rooms_ix, bedrooms_ix, population_ix, households_ix = 3, 4, 5, 6\n",
+    "\n",
+    "class CombinedAttributesAdder(BaseEstimator, TransformerMixin):\n",
+    "    \"\"\"Combines and adds attributes to the given DataFrame\"\"\"\n",
+    "    \n",
+    "    def __init__(self, add_bedrooms_per_room: bool=True) -> None:\n",
+    "        # No *args or **kargs\n",
+    "        self.add_bedrooms_per_room = add_bedrooms_per_room\n",
+    "    \n",
+    "    def fit(self, X, y=None):\n",
+    "        return self\n",
+    "    \n",
+    "    def transform(self, X, y=None):\n",
+    "        rooms_per_household = X[:, rooms_ix] / X[:, households_ix]\n",
+    "        population_per_household = X[:, population_ix] / X[:, households_ix]\n",
+    "        if self.add_bedrooms_per_room:\n",
+    "            bedrooms_per_room = X[:, bedrooms_ix] / X[:, rooms_ix]\n",
+    "            # Translates slice objects to concatenation along the second axis\n",
+    "            return np.c_[X, rooms_per_household,\n",
+    "                         population_per_household, bedrooms_per_room]\n",
+    "        else:\n",
+    "            return np.c_[X, rooms_per_household, population_per_household]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attr_adder = CombinedAttributesAdder(add_bedrooms_per_room=False)\n",
+    "housing_extra_attribs = attr_adder.transform(housing.values)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This hyperparameter will allow you to easily find out whether adding this attribute helps the Machine Learning algorithms or not. More generally, you can add a hyperparameter to gate any data preparation step that you are not 100% sure about.\n",
+    "\n",
+    "## Feature Scaling\n",
+    "Machine Learning algorithms don’t perform well when the input numerical attributes have very different scales. Note that scaling the target values is generally not required.\n",
+    "\n",
+    "There are two common ways to get all attributes to have the same scale: \n",
+    "\n",
+    "_min-max scaling_:\n",
+    "- Min-max scaling (many people call this normalization) is the simplest: values are shifted and rescaled so that they end up ranging from 0 to 1. We do this by subtracting the min value and dividing by the max minus the min. Scikit-Learn provides a transformer called `MinMaxScaler` for this.\n",
+    "\n",
+    "_standardization._\n",
+    "- First it subtracts the mean value (so standardized values always have a zero mean), and then it divides by the standard deviation so that the resulting distribution has unit variance. Unlike min-max scaling, standardization does not bound values to a specific range, which may be a problem for some algorithms (e.g., neural networks often expect an input value ranging from 0 to 1). However, standardization is much less affected by outliers. Scikit-Learn provides a transformer called `StandardScaler` for standardization.\n",
+    "\n",
+    "As with all the transformations, it is important to fit the scalers to the training data only.\n",
+    "\n",
+    "\n",
+    "## Transformation Pipelines\n",
+    "Scikit-Learn provides the `Pipeline` class to help with such sequences of transformations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "num_pipeline = Pipeline([\n",
+    "                    ('imputer', SimpleImputer(strategy='median')),\n",
+    "                    ('attribs_adder', CombinedAttributesAdder()),\n",
+    "                    ('std_dealer', StandardScaler()),\n",
+    "                ])\n",
+    "\n",
+    "housing_num_tr = num_pipeline.fit_transform(housing_num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `Pipeline` constructor takes a list of name/estimator pairs defining a sequence of steps.\n",
+    "All but the last estimator must be transformers (i.e., they must have a `fit_transform()` method). The names can be anything you like (as long as they are unique and don’t contain double underscores, __)."
+   ]
   }
  ],
  "metadata": {
