finished data prepr for chapter 2

--- a/Ch2_housing.ipynb
+++ b/Ch2_housing.ipynb
@@ -1175,7 +1175,7 @@
     "_Inspection_\n",
     "- All the estimator’s hyperparameters are accessible directly via public instance variables (e.g., `imputer.strategy`), and all the estimator’s learned parameters are accessible via public instance variables with an underscore suffix (e.g., `imputer.statistics_`).\n",
     "\n",
-    "## Handling Text and Categorical Attributes\n",
+    "### Handling Text and Categorical Attributes\n",
     "Let's look at the **ocean_proximity** attribute:"
    ]
   },
@@ -1431,7 +1431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Custom Transformers\n",
+    "### Custom Transformers\n",
     "\n",
     "You will want your transformer to work seamlessly with Scikit-Learn functionalities (such as pipelines), and since Scikit-Learn relies on duck typing (not inheritance), all you need to do is create a class and implement three methods: `fit()` (returning `self`), `transform()` , and `fit_transform()`.\n",
     "\n",
@@ -1487,7 +1487,7 @@
    "source": [
     "This hyperparameter will allow you to easily find out whether adding this attribute helps the Machine Learning algorithms or not. More generally, you can add a hyperparameter to gate any data preparation step that you are not 100% sure about.\n",
     "\n",
-    "## Feature Scaling\n",
+    "### Feature Scaling\n",
     "Machine Learning algorithms don’t perform well when the input numerical attributes have very different scales. Note that scaling the target values is generally not required.\n",
     "\n",
     "There are two common ways to get all attributes to have the same scale: \n",
@@ -1501,7 +1501,7 @@
     "As with all the transformations, it is important to fit the scalers to the training data only.\n",
     "\n",
     "\n",
-    "## Transformation Pipelines\n",
+    "### Transformation Pipelines\n",
     "Scikit-Learn provides the `Pipeline` class to help with such sequences of transformations."
    ]
   },
@@ -1528,8 +1528,54 @@
    "metadata": {},
    "source": [
     "The `Pipeline` constructor takes a list of name/estimator pairs defining a sequence of steps.\n",
-    "All but the last estimator must be transformers (i.e., they must have a `fit_transform()` method). The names can be anything you like (as long as they are unique and don’t contain double underscores, __)."
+    "All but the last estimator must be transformers (i.e., they must have a `fit_transform()` method). The names can be anything you like (as long as they are unique and don’t contain double underscores, __).\n",
+    "\n",
+    "When you call the pipeline’s `fit()` method, it calls `fit_transform()` sequentially on all transformers, passing the output of each call as the parameter to the next call until it reaches the final estimator, for which it calls the `fit()` method.\n",
+    "\n",
+    "It would be more convenient to have a single transformer able to handle all columns, applying the appropriate transformations to each column."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
+    "\n",
+    "# List of numerical column names\n",
+    "num_attribs = list(housing_num)\n",
+    "\n",
+    "# List of categorical column names\n",
+    "cat_attribs = ['ocean_proximity']\n",
+    "\n",
+    "'''\n",
+    "The constructor requires a list of tuples, where each tuple \n",
+    "contains a name, a transformer, and a list of names (or indices)\n",
+    "of columns that the transformer should be applied to.\n",
+    "'''\n",
+    "full_pipeline = ColumnTransformer([\n",
+    "                    ('num', num_pipeline, num_attribs),\n",
+    "                    ('cat', OneHotEncoder(), cat_attribs),\n",
+    "                ])\n",
+    "\n",
+    "# Create fully transformed dataframe\n",
+    "housing_prepared = full_pipeline.fit_transform(housing)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Select and Train a Model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
