fitted linear regression and regression tree

--- a/Ch2_housing.ipynb
+++ b/Ch2_housing.ipynb
@@ -1572,6 +1572,121 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Train a linear regression model\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "lin_reg = LinearRegression()\n",
+    "lin_reg.fit(housing_prepared, housing_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predictions: [210644.60459286 317768.80697211 210956.43331178  59218.98886849\n",
+      " 189747.55849879]\n",
+      "Labels: [286600.0, 340600.0, 196900.0, 46300.0, 254500.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Try Linear model on few instances from the training set\n",
+    "some_data = housing.iloc[:5]\n",
+    "some_labels = housing_labels.iloc[:5]\n",
+    "some_data_prepared = full_pipeline.transform(some_data)\n",
+    "print('Predictions:', lin_reg.predict(some_data_prepared))\n",
+    "print('Labels:', list(some_labels))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68628.19819848922\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Let's measure model's RMSE\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "housing_predictions = lin_reg.predict(housing_prepared)\n",
+    "lin_mse = mean_squared_error(housing_labels, housing_predictions)\n",
+    "lin_rmse = mean_squared_error(housing_labels, housing_predictions)\n",
+    "lin_rmse = np.sqrt(lin_mse)\n",
+    "print(lin_rmse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is better than nothing, but clearly not a great score: most districts’ median_housing_values range between \\\\$120,000 and \\\\$265,000, so a typical prediction error of \\\\$68,628 is not very satisfying. This is an example of a model underfitting the training data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Let's train a Decision Tree Model\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
+    "tree_reg = DecisionTreeRegressor()\n",
+    "tree_reg.fit(housing_prepared, housing_labels)\n",
+    "\n",
+    "# Let's evaluate on a training set\n",
+    "housing_predictions = tree_reg.predict(housing_prepared)\n",
+    "tree_mse = mean_squared_error(housing_labels, housing_predictions)\n",
+    "tree_rmse = np.sqrt(tree_mse)\n",
+    "print(tree_rmse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Perfect fit? it's more like model has badly overfit data. As we saw earlier, you don’t want to touch the test setuntil you are ready to launch a model you are confident about, so you need to use part of the training set for training and part of it for model validation.\n",
+    "\n",
+    "### Better Evaluation Using Cross-Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
